app/javascript/styles/mastodon/components.scss
/* ... */
.account__header {
  overflow: hidden;

  &.inactive {
    opacity: 0.5;

    .account__header__image,
    .account__avatar {
      filter: grayscale(100%);
    }
  }

  &__info {
    position: absolute;
    top: 10px;
    left: 10px;
  }

  &__image {
    overflow: hidden;
    height: 145px;
    position: relative;
    background: darken($ui-base-color, 4%);

    img {
      object-fit: cover;
      display: block;
      width: 100%;
      height: 100%;
      margin: 0;
    }
  }

  &__bar {
    position: relative;
    background: lighten($ui-base-color, 4%);
    padding: 5px;
    border-bottom: 1px solid lighten($ui-base-color, 12%);

    .avatar {
      display: block;
      flex: 0 0 auto;
      width: 94px;
      margin-left: -2px;

      .account__avatar {
        background: darken($ui-base-color, 8%);
        border: 2px solid lighten($ui-base-color, 4%);
      }
    }
  }

  &__tabs {
    display: flex;
    align-items: flex-start;
    padding: 7px 5px;
    margin-top: -55px;

    &__buttons {
      display: flex;
      align-items: center;
      padding-top: 55px;
      overflow: hidden;

      .icon-button {
        border: 1px solid lighten($ui-base-color, 12%);
        border-radius: 4px;
        box-sizing: content-box;
        padding: 2px;
      }

      .button {
        margin: 0 8px;
      }
    }

    &__name {
      padding: 5px;

      .account-role {
        vertical-align: top;
      }

      .emojione {
        width: 22px;
        height: 22px;
      }

      h1 {
        font-size: 16px;
        line-height: 24px;
        color: $primary-text-color;
        font-weight: 500;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;

        small {
          display: block;
          font-size: 14px;
          color: $darker-text-color;
          font-weight: 400;
          overflow: hidden;
          text-overflow: ellipsis;
        }
      }
    }

    .spacer {
      flex: 1 1 auto;
    }
  }

  &__bio {
    overflow: hidden;
    margin: 0 -5px;

    .account__header__content {
      padding: 20px 15px;
      padding-bottom: 5px;
      color: $primary-text-color;
    }

    .account__header__fields {
      margin: 0;
      border-top: 1px solid lighten($ui-base-color, 12%);

      a {
        color: lighten($ui-highlight-color, 8%);
      }

      dl:first-child .verified {
        border-radius: 0 4px 0 0;
      }

      .verified a {
        color: $valid-value-color;
      }
    }
  }

  &__extra {
    margin-top: 4px;

    &__links {
      font-size: 14px;
      color: $darker-text-color;

      a {
        display: inline-block;
        color: $darker-text-color;
        text-decoration: none;
        padding: 10px;
        padding-top: 20px;
        font-weight: 500;

        strong {
          font-weight: 700;
          color: $primary-text-color;
        }
      }
    }
  }
}

.trends {
  &__header {
    color: $dark-text-color;
    background: lighten($ui-base-color, 2%);
    border-bottom: 1px solid darken($ui-base-color, 4%);
    font-weight: 500;
    padding: 15px;
    font-size: 16px;
    cursor: default;

    .fa {
      display: inline-block;
      margin-right: 5px;
    }
  }

  &__item {
    display: flex;
    align-items: center;
    padding: 15px;
    border-bottom: 1px solid lighten($ui-base-color, 8%);

    &:last-child {
      border-bottom: 0;
    }

    &__name {
      flex: 1 1 auto;
      color: $dark-text-color;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;

      strong {
        font-weight: 500;
      }

      a {
        color: $darker-text-color;
        text-decoration: none;
        font-size: 14px;
        font-weight: 500;
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;

        &:hover,
        &:focus,
        &:active {
          span {
            text-decoration: underline;
          }
        }
      }
    }

    &__current {
      flex: 0 0 auto;
      font-size: 24px;
      line-height: 36px;
      font-weight: 500;
      text-align: right;
      padding-right: 15px;
      margin-left: 5px;
      color: $secondary-text-color;
    }

    &__sparkline {
      flex: 0 0 auto;
      width: 50px;

      path:first-child {
        fill: rgba($highlight-text-color, 0.25) !important;
        fill-opacity: 1 !important;
      }

      path:last-child {
        stroke: lighten($highlight-text-color, 6%) !important;
      }
    }
  }
}

.conversation {
  display: flex;
  border-bottom: 1px solid lighten($ui-base-color, 8%);
  padding: 5px;
  padding-bottom: 0;

  &:focus {
    background: lighten($ui-base-color, 2%);
    outline: 0;
  }

  &__avatar {
    flex: 0 0 auto;
    padding: 10px;
    padding-top: 12px;
  }

  &__content {
    flex: 1 1 auto;
    padding: 10px 5px;
    padding-right: 15px;

    &__info {
      overflow: hidden;
    }

    &__relative-time {
      float: right;
      font-size: 15px;
      color: $darker-text-color;
      padding-left: 15px;
    }

    &__names {
      color: $darker-text-color;
      font-size: 15px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      margin-bottom: 4px;

      a {
        color: $primary-text-color;
        text-decoration: none;

        &:hover,
        &:focus,
        &:active {
          text-decoration: underline;
        }
      }
    }
  }
}

